# tb-scope-exit

./: .clang-format  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: ci.yml  tests.yml
include/tb/: scope_exit.h
test/: TbScopeExit.cmake
test/src/: main.cc
